tests/NormalTests/paczka1/fuzzy1/98084885.err
Error in line 6: vIR A456 79,4
Error in line 10: SHYEco S263 71,3
Error in line 16: W5dYplZtSA A834 49,6
Error in line 17: W5dYplZtSA A456 26,9
Error in line 20: W5dYplZtSA S113 50,4
Error in line 21: V6n A834 139,6
Error in line 22: W5dYplZtSA A456 47,0
Error in line 25: W5dYplZtSA S263 2,6
Error in line 30: g8xA S263 35,4
Error in line 32: g8xA S113 58,3
